--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/vite": "^4.1.14",
     "framer-motion": "^12.23.22",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
